tests/snapshots/align_comparisons/six_operators.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/align_comparisons/six_operators.input.py
---
"""
All six arithmetic comparison operators align in one group with
right-alignment, so each operator's last character sits in the
shared column.
"""

if (
    a     == 1
    and b != 2
    and c  < 3
    and d <= 4
    and e  > 5
    and f >= 6
):
    pass
