tests/snapshots/align_comparisons/trailing_comment_breaks.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/align_comparisons/trailing_comment_breaks.input.py
---
align-comparisons@208..209
