tests/snapshots/align_comparisons/trailing_comment_extends.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/align_comparisons/trailing_comment_extends.input.py
---
align-comparisons@204..205
align-comparisons@254..255
