tests/snapshots/align_comparisons/trailing_comment_extends.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/align_comparisons/trailing_comment_extends.input.py
---
"""
A trailing comment after the prev-operand source line does not
break the alignment run. The pipeline's `SuppressionMap` filter
handles directive comments separately on emitted edits.
"""

if (
    foo         == 1  # trailing
    and bar_baz == 2
    and qux     == 3
):
    pass
