tests/snapshots/align_comparisons/with_comments.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/align_comparisons/with_comments.input.py
---
align-comparisons@237..238
