tests/snapshots/align_comparisons/with_comments.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/align_comparisons/with_comments.input.py
---
"""
A comment between two operands breaks the alignment run, splitting
them into singletons.
"""

if (
    foo == 1
    # divider
    and bar_baz == 2
    and qux     == 3
):
    pass
